# asahi

./: Cargo.toml  README.md
configs/: asahi-portals.conf  asahi.conf  asahi.portal  org.freedesktop.impl.portal.desktop.asahi.service  xdg-desktop-portal-asahi.service
scripts/: asahictl  set-portal-config.sh
src/: asahi_state.rs  config.rs  context.rs  main.rs  portal.rs  sunrise_watcher.rs
src/_utils/: mod.rs  unwrap_or_return.rs
src/dbus_portal/: control.rs  mod.rs  portal.rs  portal_connection.rs  wrapper.rs  xdg_interfaces.rs
src/location/: location.rs  mod.rs  provider.rs  provider_trait.rs
src/location/providers/: ip.rs
src/location_old/: location_provider.rs
