[package]
name = "asahi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
chrono = "0.4.34"
ctrlc = { version = "3.4.4", features = ["termination"] }
minreq = "2.14.0"
sunrise = "1.0.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
zbus = "4.1.2"
log = "0.4.27"
