[package]
name = "asahi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
ctrlc = { version = "3.4.4", features = ["termination"] }
minreq = { version = "2.14.0", default-features = false }
log = "0.4.27"
zbus = "5.8.0"
sunrise = "2.1.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
